using UnityEngine;

public static class Constants
{
    public static readonly string VerticalKey = "Vertical";
    public static readonly string HorizontalKey = "Horizontal";

    public static readonly int Speed = Animator.StringToHash("Speed"); 
    public static readonly int IsMoving = Animator.StringToHash("IsMoving"); 
    public static readonly int IsCrippled = Animator.StringToHash("IsCrippled"); 
    public static readonly int AlertTrigger = Animator.StringToHash("AlertTrigger"); 
    public static readonly int AttackTrigger = Animator.StringToHash("AttackTrigger"); 
    
    public static readonly string Fire1Key = "Fire1";
    public static readonly string Fire2Key = "Fire2";
    public static readonly string SpawnKey = "Spawn";
    
    public static readonly string PlayerTag = "Player";

    public static readonly string TargetPositionData = "TargetPosition";
    public static readonly string TargetData = "Target";
    public static readonly string AlertData = "Alert";
}